db-service.yml

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: graces-3-tier-namespace
spec:
  selector:
    app: db
  type: LoadBalancer
  ports:
  - port: 5432
    targetPort: 5432
