ingress.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: nginx-ingress
  namespace: graces-3-tier-namespace
spec:
  ingressClassName: 'nginx'
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-lb-svc
            port:
              number: 80
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: api-lb-svc
            port:
              number: 443
